--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ansi-html": "^0.0.9",
     "antd": "^5.13.1",
+    "browserslist": "^4.22.2",
+    "css-select": "^5.1.0",
     "html2pdf.js": "^0.10.1",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reselect": "^5.1.0",
+    "resolve-url-loader": "^5.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
