--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@reduxjs/toolkit": "^2.0.1",
-    "antd": "^5.13.2",
-    "dayjs": "^1.11.10",
+    "@ant-design/icons": "^5.3.6",
+    "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.4",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
+    "react-redux": "^9.1.1",
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
   "scripts": {
@@ -41,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.79",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4"
   }
