--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   "devDependencies": {
     "@types/react": "^18.2.79",
     "@types/styled-components": "^5.1.34",
-    "babel-plugin-styled-components": "^2.1.4"
+    "babel-plugin-styled-components": "^2.1.4",
+    "concurrently": "^8.2.2",
+    "electron": "^30.0.1",
+    "electron-builder": "^24.13.3",
+    "wait-on": "^7.2.0"
   }
 }
