instalacion html2pdf

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.4",
     "eslint-config-react-app": "^7.0.1",
+    "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
