remove html2pdf.js

--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@babel/plugin-transform-class-properties": "^7.24.1",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.1",
+    "@babel/plugin-transform-numeric-separator": "^7.24.1",
+    "@babel/plugin-transform-optional-chaining": "^7.24.5",
+    "@babel/plugin-transform-private-methods": "^7.24.1",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@reduxjs/toolkit": "^2.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "antd": "^5.16.4",
     "eslint-config-react-app": "^7.0.1",
-    "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
