--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@rollup/plugin-terser": "^0.4.4",
     "antd": "^5.16.4",
     "eslint-config-react-app": "^7.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
