--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.79",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
